# BYOHC-transpiler

./: .gitignore  README.md  stack.yaml  transpiler.cabal
app/: Main.hs
example/: Case.hs  Pattern.hs  PatternGuard.hs
example/ffi/: hello.hs  hello.py
src/: Desugar.hs  Trans.hs
src/Desugar/: Case.hs  GADT.hs  If.hs  Lit.hs  Monad.hs  Rename.hs  Where.hs
src/Desugar/Case/: AltCompletion.hs  ExpandPattern.hs
src/Desugar/Rename/: CollectGlobal.hs  Rename.hs
src/Trans/: Internal.hs
utils/gen-template/: Lib.hs  Main.hs
