name:                transpiler
version:             0.1.0.0
-- synopsis:
description:         Please see README.md
-- homepage:
-- license:
license-file:        LICENSE
author:              Alex Lu (op8867555)
maintainer:          op8867555@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Trans, Desugar.If
  build-depends:       base >= 4.7 && < 5
                     , haskell-src-exts
                     , mtl
                     , transformers
                     , containers
                     , aeson
  default-language:    Haskell2010

executable transpiler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transpiler
                     , bytestring
                     , aeson
                     , optparse-applicative
  default-language:    Haskell2010

-- test-suite transpiler-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , transpiler
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
